2004-02-12  Tomasz Kłoczk o<kloczek@pld.org.pl>

	* configure.in: Trivial cleanup: remove AC_SUBST(CFLAGS),
	  AC_SUBST(CPPFLAGS) and AC_SUBST(LDFLAGS). This variables are
	  substed by default.

2003-12-30  Jaka Mocnik  <jaka@gnu.org>

	* Makefile.am: include intltool-modules dir in distribution tarball.

2003-12-29  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: added --enable-deprecations parameter to allow for
	configurable inclusion of *_DISABLE_DEPRECATED defines.
	bumped version to 2.5.2; tagged as GHEX_2_5_2; released a tarball
	* src/Makefile.am: respect the above.

2003-12-19  Shakti Sen <shakti.sen@wipro.com>

        * src/ui.c (close_cb):
        Unreferenced the object (doc) only after destroying the window.
        Fixes the bug #129674

2003-12-14  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: removed -Wall in order to allow non-gcc builds.

2003-11-02  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c (render_xc, render_ac): render inactive cursor as
	an outlined rectangle. fixes #126034.
	(gtk_hex_key_press): toggle active view on tab, not just on control
	tab. fixes #126033.
	(gtk_hex_size_allocate): queue offset widget for redraw .

2003-10-25  Jaka Mocnik  <jaka@gnu.org>

	replaced deprecated functions all over the code. this will probably
	cause some things not to work;)
	* src/findreplace.c: Use GtkColorSelection.
	* src/preferences.c: Use GtkFontSelection.
	* src/converter.c: GnomeDialog -> GtkDialog.
	* src/gtkhex.c (gtk_hex_class_init): gtk_signal_new -> g_signal_new.
	* src/ghex-window.c, src/ui.c: GnomeMessageBox -> GtkMessageDialog.
	* configure.in: version 2.5.1; tag GHEX_2_5_1.

2003-10-10  Jaka Mocnik  <jaka@gnu.org>

	* src/print.c (ghex_print_job_info_destroy): remove
	gnome_print_job_close().
	* src/print.c (ghex_print_job_execute): call gnome_print_job_close()
	here!
	* src/gtkhex.c (gtk_hex_update_auto_highlight): moved cur declaration
	to beginning of the block!

2003-10-08  David Hammerton <crazney@crazney.net>
